# health-hub

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
apps/accounts/: admin.py  apps.py  forms.py  managers.py  models.py  services.py  signals.py  urls.py  views.py
apps/accounts/api/: serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/tests/: test_api.py
apps/billing/: admin.py  models.py
apps/billing/api/: serializers.py  urls.py  views.py
apps/billing/migrations/: 0001_initial.py
apps/coach/: admin.py  models.py  urls.py  views.py
apps/coach/api/: serializers.py  urls.py  views.py
apps/coach/migrations/: 0001_initial.py
apps/coach/services/: __init__.py  coach.py  guardrail.py  prompts.py  providers.py
apps/coach/tests/: test_coach_service.py  (+1 more)
apps/common/: models.py
apps/consultations/: admin.py  models.py  services.py  urls.py  views.py
apps/fitness/: admin.py  models.py  services.py  urls.py  views.py
apps/notifications/: tasks.py
apps/nutrition/: admin.py  models.py
config/: __init__.py  api_router.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
docs/: erd.md
frontend/: .env.local.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: NavBar.tsx
frontend/lib/: api.ts  auth.ts
requirements/: base.txt  dev.txt
templates/: base.html
(+26 files in other folders)
